[gd_scene load_steps=3 format=3 uid="uid://bqesxxoqsvypj"]

[ext_resource type="Script" uid="uid://de5gmsmkc4v6q" path="res://scenes/UI/game_ui_manager.gd" id="1_mtp4b"]
[ext_resource type="Texture2D" uid="uid://bfej55w5qutqx" path="res://cells/shadow_cell/shadow_cell_strong.png" id="1_yt7gn"]

[node name="GameBG" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mtp4b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15116301, 0.23316208, 0.49141586, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 208.0
offset_bottom = 156.0
theme_override_constants/separation = 104

[node name="Game Name" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Photo-frenzy"

[node name="LevelCounter" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Level: 0"

[node name="Lasers" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Lasers:"

[node name="LaserIconContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 21.475)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/LaserIconContainer"]
layout_mode = 2
texture = ExtResource("1_yt7gn")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/LaserIconContainer"]
layout_mode = 2
texture = ExtResource("1_yt7gn")

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/LaserIconContainer"]
layout_mode = 2
texture = ExtResource("1_yt7gn")

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/LaserIconContainer"]
layout_mode = 2
texture = ExtResource("1_yt7gn")

[node name="TextureRect5" type="TextureRect" parent="VBoxContainer/LaserIconContainer"]
layout_mode = 2
texture = ExtResource("1_yt7gn")

[node name="Timer" type="Label" parent="."]
layout_mode = 0
offset_left = 774.0
offset_top = 10.0
offset_right = 950.0
offset_bottom = 105.0
theme_override_font_sizes/font_size = 71
text = "5.00"

[node name="Hint" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -201.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Helpful hints live here"
autowrap_mode = 2
